SEL Fast Message Bug-fix for Signed 16-bit Integer Fast Meter Messages
This issue was migrated from bug 9435 in our old bug tracker.
Original bug information:
Reporter: Chris Bontje
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: Windows 8
Platform: x86
Version: 1.11.x (Experimental)
Attachments:
packet-selfm.c.11-14-2013.patch: packet-selfm.c 11-14-2013 Bug-Fix Patch
587_4.pcap: Sample Packet Capture for Demonstration of Bug Fix.