From Chris Bontje via https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=9435 : SEL Fast Message bug fix for signed 16-bit integer fast meter messages

svn path=/trunk/; revision=53398